force-app/main/default/objects/ssot__RetailStore__dlm/fields/ssot__DefaultPricebookId__c.field-meta.xml
<CustomField>
    <fullName>ssot__DefaultPricebookId__c</fullName>
    <label>Default Pricebook</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DefaultPricebookId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>