force-app/main/default/objects/ssot__RetailStore__dlm/fields/ssot__DeliveryFrequencyNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__DeliveryFrequencyNumber__c</fullName>
    <label>Delivery Frequency</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DeliveryFrequencyNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>