force-app/main/default/objects/ssot__RetailStore__dlm/fields/ssot__DeliveryFrequencyType__c.field-meta.xml
<CustomField>
    <fullName>ssot__DeliveryFrequencyType__c</fullName>
    <label>Delivery Frequency Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DeliveryFrequencyType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>