force-app/main/default/objects/ssot__RetailStore__dlm/fields/ssot__DeliveryMethod__c.field-meta.xml
<CustomField>
    <fullName>ssot__DeliveryMethod__c</fullName>
    <label>Delivery Method</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DeliveryMethod</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>