force-app/main/default/objects/ssot__RetailStore__dlm/fields/ssot__LogoImageURL__c.field-meta.xml
<CustomField>
    <fullName>ssot__LogoImageURL__c</fullName>
    <label>Logo Image</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LogoImageURL</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>