force-app/main/default/objects/ssot__RetailStore__dlm/fields/ssot__PlaceRecordId__c.field-meta.xml
<CustomField>
    <fullName>ssot__PlaceRecordId__c</fullName>
    <label>Place Record</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PlaceRecordId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>