force-app/main/default/objects/ssot__RetailStore__dlm/fields/ssot__PlaceRecordObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__PlaceRecordObject__c</fullName>
    <label>Place Record Object Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PlaceRecordObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>