force-app/main/default/objects/ssot__RetailStore__dlm/fields/ssot__PreferredVisitDaysText__c.field-meta.xml
<CustomField>
    <fullName>ssot__PreferredVisitDaysText__c</fullName>
    <label>Preferred visit days</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PreferredVisitDaysText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>