force-app/main/default/objects/ssot__RetailStore__dlm/fields/ssot__PrimaryContactId__c.field-meta.xml
<CustomField>
    <fullName>ssot__PrimaryContactId__c</fullName>
    <label>Primary Contact</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PrimaryContactId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>