force-app/main/default/objects/ssot__RetailStore__dlm/fields/ssot__RecommendedVisitFrequencyType__c.field-meta.xml
<CustomField>
    <fullName>ssot__RecommendedVisitFrequencyType__c</fullName>
    <label>Recommended Visit Frequency Type</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RecommendedVisitFrequencyType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>